widget: Fix display glitches with rectangular selection and wide characters

https://bugzilla.gnome.org/show_bug.cgi?id=730800